Use --add-modules=ALL-DEFAULT in launcher.